deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # kpt-merge: /blueprint
  name: stable-diffusion # kpt-set: ${name}
  annotations:
    internal.kpt.dev/upstream-identifier: 'apps|Deployment|default|blueprint'
spec:
  replicas: 1
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/component: webapp
    spec:
      serviceAccountName: stable-diffusion # kpt-set: ${name}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
      - name: app
        image: ghcr.io/mgoltzsche/stable-diffusion:0.2 # kpt-set: ${image}:${version}
        imagePullPolicy: IfNotPresent
        env: []
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 100m
            memory: 32Mi
        ports:
        - containerPort: 8080 # kpt-set: ${port}
        livenessProbe:
          httpGet:
            path: "/healthz" # kpt-set: ${healthcheck}
            port: 8080 # kpt-set: ${port}
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: "/healthz" # kpt-set: ${healthcheck}
            port: 8080 # kpt-set: ${port}
          initialDelaySeconds: 1
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 2
